--- a/BertScout2025/AboutPage.xaml
+++ b/BertScout2025/AboutPage.xaml
@@ -7,7 +7,6 @@
     x:Name="cpAbout"
     Title="About"
     BackgroundColor="{AppThemeBinding Light=White, Dark=#003300}"
-    
     >
 
     <VerticalStackLayout
@@ -15,7 +14,7 @@
 
         <Label
             x:Name="LabelAboutVersion"
-            Text="Version: 2024.2.10.0"
+            Text="Version: 2025.2.3.0"
             HorizontalOptions="Center"
             />
 
@@ -27,7 +26,7 @@
 
         <Label
             HorizontalOptions="Center"
-            Text="Written by: Anton, Keith, Evan, Zander, and Scott"
+            Text="Written by: Evan, Paul, and Scott"
             />
 
     </VerticalStackLayout>
