--- a/BertScout2025/AirtablePage.xaml
+++ b/BertScout2025/AirtablePage.xaml
@@ -11,11 +11,13 @@
     
     <VerticalStackLayout
         VerticalOptions="Fill"
+        Padding="0,50,0,0"
         SizeChanged="VerticalStackLayout_SizeChanged"
         >
         
         <Label 
             x:Name="AirtableLabel"
+            FontSize="{OnPlatform WinUI=Small, Android=Medium}"
             Text="Send data to Airtable!" 
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
@@ -23,6 +25,9 @@
         <Button 
             x:Name="AirtableSend"
             Text="Send"
+            Margin="0,20,0,20"
+            WidthRequest="100"
+            HeightRequest="50"
             HorizontalOptions="Center"
             Clicked="AirtableSend_Clicked"
             />
@@ -30,6 +35,7 @@
         <Label 
             x:Name="AirtableUpdatedLabel"
             Text=""
+            FontSize="{OnPlatform WinUI=Small, Android=Medium}"
             VerticalOptions="Center" 
             HorizontalOptions="Center"
             />
